--- a/assets/style.css
+++ b/assets/style.css
@@ -140,11 +140,12 @@ section#cards {
 }
 
 .allcards article {
-    background-color: #232323;
+    background-color: #12101a61;
     padding: 3rem;
     border-radius: 3rem;
     transition: 0.2s ease-in-out;
     cursor: pointer;
+    border: 0.5rem solid #d8d7e936;
 }
 
 .allcards div {
@@ -156,7 +157,7 @@ span.definition {
 }
 
 .allcards div:focus article {
-    background-color: #2c2c2c;
+    background-color: #2c234d6e;
     transition: 0.2s ease-in-out;
     animation: cardshow 1s ease-in-out forwards;
 }
